refactored database management